--- a/src/JokersWebDo.mxml
+++ b/src/JokersWebDo.mxml
@@ -2,8 +2,19 @@
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
 			   xmlns:s="library://ns.adobe.com/flex/spark" 
 			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600">
+	
+	<fx:Script>
+		<![CDATA[
+			import mx.events.DragEvent;
+			protected function button1_clickHandler(event:MouseEvent):void
+			{
+				
+			}
+		]]>
+	</fx:Script>
+	
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	<s:Button width="100%" height="100%" label="Button"/>
+	<s:Button width="100%" height="100%" label="Button" click="button1_clickHandler(event)"/>
 </s:Application>
